<resources>
    <string name="app_name">SJournal</string>
    <string name="menu_settings">Settings</string>
    <string name="symbol_num">No.</string>
    <string name="symbol_col_add">+</string>
    <string name="symbol_absent">a</string>
    <string name="symbol_row_add">+</string>
    <string name="preferences_category_blank">Table format</string>
    <string name="preference_blank_class_style">Classes output format</string>
    <string name="preference_blank_class_style_summary">The display format of classes</string>
    <string name="preference_blank_class_style_dialog_title">Classes format</string>
    <string name="preferences_header_blank_title">Blank</string>
    <string name="preferences_header_blank_summary">Blank format</string>
    <string name="preference_blank_name_format">Student Names</string>
    <string name="preference_blank_name_format_summary">The display format of student names</string>
    <string name="preference_blank_name_format_dialog_title">Name format</string>
    <string name="preference_blank_symbol_format">Notes</string>
    <string name="preference_blank_symbol_format_summary">Format text notes in the table cells</string>
    <string name="preference_blank_symbol_format_dialog_title">Note format</string>
    <string name="preference_blank_absent_symbol_title">Symbol \"Absent\"</string>
    <string name="preference_blank_absent_symbol_summary">The absent symbol (up to 3 characters)</string>
    <string name="preferences_title">Settings</string>
    <string name="dialog_group_add_hint">Enter the group code…</string>
    <string name="dialog_subject_add_title_hint">New Subject title…</string>
    <string name="dialog_subject_add_abbr_hint">Acronym of new Subject…</string>
    <string name="dialog_class_type_add_title_hint">Name…</string>
    <string name="dialog_class_type_add_abbr_hint">Acronym…</string>
    <string name="dialog_class_type_update_title_hint">New name…</string>
    <string name="dialog_class_type_update_abbr_hint">New acronym</string>
    <string name="error_entry_start_with_space">Caution! Space at the beginning of names will not allow! </string>
    <string name="error">Something went wrong! Error!</string>
    <string name="empty">Empty</string>
    <string name="error_entry_exists">Record already exists!</string>
    <string name="dialog_group_update_hint">Enter the new name</string>
    <string name="dialog_group_add_title">Create a new group</string>
    <string name="dialog_group_update_title">Change group name</string>
    <string name="dialog_group_delete_title">Deleting a group</string>
    <string name="dialog_group_delete_with_students">Remove all students</string>
    <string name="error_group_contains_students">Removal is not possible! Group contains records of students.</string>
    <string name="dialog_group_delete_alert_delete_students">Caution!\nAll data about students, members only in this group will be deleted.</string>
    <string name="list_empty"> List is empty!</string>
    <string name="dialog_subject_add_title">Creating a new subject…</string>
    <string name="dialog_subject_update_title">Subject edit…</string>
    <string name="error_entry_not_specify">Fill in all required fields!</string>
    <string name="dialog_subject_delete_title">Deleting subject…</string>
    <string name="dialog_student_delete_are_you_sure">This will erase all records associated with the student in all groups!\nAll power to delete?</string>
    <string name="student_id">Student ID</string>
    <string name="student_id_hint">Unique id</string>
    <string name="name_last">Last Name</string>
    <string name="name_last_hint">Enter the last name</string>
    <string name="name_first">First Name</string>
    <string name="name_first_hint">Enter the first name</string>
    <string name="name_middle">Middle Name</string>
    <string name="name_middle_hint">Enter the middle name</string>
    <string name="groups">Groups</string>
    <string name="dialog_groups_choice_hint">Select groups</string>
    <string name="get_choice">Select</string>
    <string name="e_mail">e-mail</string>
    <string name="phone_mob">Mob. Phone</string>
    <string name="phone_home">Phone</string>
    <string name="note">Note</string>
    <string name="e_mail_hint">e-mail is not specified</string>
    <string name="phone_mob_hint">Mob. phone</string>
    <string name="phone_home_hint">Phone</string>
    <string name="note_hint">Any text</string>
    <string name="dialog_student_add_title">Adding a student…</string>
    <string name="preference_general_auto_student_id_summary">Enter Student ID manually</string>
    <string name="preference_general_auto_student_id_title">Student ID</string>
    <string name="preferences_header_general_title">General</string>
    <string name="preferences_header_general_summary">General Settings</string>
    <string name="error_student_id_exist">ID is already in use! Please, enter new value!</string>
    <string name="dialog_student_add_group_not_selected">Select groups!</string>
    <string name="dialog_student_select_groups_title">Select groups…</string>
    <string name="dialog_student_update_title">Editing student\'s info…</string>
    <string name="dialog_student_delete_title">Deleting a record of the student…</string>
    <string name="change">Edit</string>
    <string name="delete">Delete</string>
    <string name="group">Group</string>
    <string name="subject">Subject</string>
    <string name="class_type">Type of class</string>
    <string name="dialog_group_choice_title">Groups</string>
    <string name="dialog_subject_choice_title">Subjects</string>
    <string name="fio">Student Name</string>
    <string name="dialog_choice_more">More</string>
    <string name="dialog_choice_add">Add</string>
    <string name="menu_group">Groups</string>
    <string name="menu_add">Add</string>
    <string name="menu_update">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_subject">Subjects</string>
    <string name="dialog_subject_delete_are_you_sure">Caution!\nWill be deleting all classes and marks for this Subject</string>
    <string name="dialog_class_type_add_title">Adding a new type of class…</string>
    <string name="dialog_class_type_update_title">Editing type of class…</string>
    <string name="dialog_class_type_delete_title">Deleting type of class…</string>
    <string name="dialog_class_type_delete_are_you_sure">Caution!\nWill be deleting all marks for this type of class!</string>
    <string name="menu_class_type">Class types</string>
    <string name="menu_student">Students</string>
    <string name="dialog_student_select_title">Choice a Student…</string>
    <string name="theme_abbr">Title</string>
    <string name="theme_abbr_hint">Enter the short title of class</string>
    <string name="theme">Theme</string>
    <string name="theme_hint">Enter the topic name</string>
    <string name="color">Color</string>
    <string name="dialog_color_choice">Select the color</string>
    <string name="dialog_class_add_title">New Class…</string>
    <string name="dialog_class_update_title">Edit Class…</string>
    <string name="dialog_class_delete_title">Delete Class…</string>
    <string name="create">Create</string>
    <string name="update">Edit</string>
    <string name="back_to_exit">Press twice to close…</string>
    <string name="dialog_class_delete_are_you_sure">Remove class?</string>
    <string name="mark_note">Note</string>
    <string name="mark">Mark</string>
    <string name="preference_mark_scale_set_title">Rating scale</string>
    <string name="preference_mark_scale_set_summary">List of marks for quick access</string>
    <string name="preference_mark_scale_set_dialog_title">Enter a comma-separated list of marks</string>
    <string name="preference_symbol_set_title">Symbols</string>
    <string name="preference_symbol_set_summary">List of symbols for quick access</string>
    <string name="preference_symbol_set_dialog_title">Enter a comma-separated list of symbols</string>
    <string name="dialog_mark_symbol_enter_title">Write a note</string>
    <string name="dialog_mark_symbol_enter_hint">Any symbols</string>
    <string name="dialog_mark_mark_enter_hint">Enter any mark</string>
    <string name="menu_delete_in_group">Remove from group</string>
    <string name="delete_student_only_one_group">Student is enrolled only in this group!\nPossibly only complete deleting!</string>
    <string name="menu_delete_full">Delete</string>
    <string name="blank_absent_row">Absent</string>
    <string name="error_file_exists">Error!\nFile exists!</string>
    <string name="menu_database">Database</string>
    <string name="menu_database_export">Backup</string>
    <string name="menu_database_restore">Restore</string>
    <string name="db_save_ok">Saved!</string>
    <string name="error_ext_storage_not_writable">Error!\nExternal Storage not found!</string>
    <string name="dialog_database_restore_title">Caution!</string>
    <string name="dialog_database_restore_message">You are going to restore DB from file. Your current data will be lost and replaced by selected DB file! Continue?</string>
    <string name="dialog_database_backup_list_empty">Backup files not found…</string>
    <string name="dialog_import_students_pick_file_button">Click to pick a file"</string>
    <string name="menu_import">Import from File</string>
    <string name="do_import">Import</string>
    <string name="dialog_encode">Encode:</string>
    <string name="dialog_file">File:</string>
    <string name="dialog_group_list_empty">List is empty…</string>
    <string name="import_rule">File format: csv, where each line is info about a student in format:\n{id; (may be missing)}[Last Name];[First Name];[Middle Name];[e-mail];[phone1];[phone2];[note]. Example:\n=====================\nFile name: Group1.csv\nPotter;Harry;;gp@gmail.com;;;The Boy Who Lived\n=====================\n*. In the .csv format can be easily imported any list of students from Excel or other text editor.</string>
    <string name="menu_blank_style">Table style</string>
    <string name="menu_semester_select">Choice semester</string>
    <string name="menu_blank_type_summary">Rating</string>
    <string name="menu_blank_panel_show">Show/hide panel</string>
    <string name="menu_blank_group_select">Group</string>
    <string name="menu_blank_subject_select">Subject</string>
    <string name="menu_blank_class_type_select">Class Type</string>
    <string name="menu_blank_add_class_absents_select">New Class</string>
    <string name="menu_about">About</string>
    <string name="dialog_about_go_to_forum">GitHub</string>
    <string name="dialog_about_go_to_google_app_store">Google Play</string>
    <string name="dialog_about_send_email">Send e-mail</string>
    <string name="menu_help">Help</string>
    <string name="menu_export">Export</string>
    <string name="menu_export_img">To Image</string>
    <string name="dialog_version_restriction_message">Not available in free version!</string>
    <string name="preference_general_calendar_sync_summary">Autoselect blank on start, if title of current event in Calendar contains group/subject/type names.</string>
    <string name="preference_general_calendar_sync_title">Sync with Calendar</string>
    <string name="preference_general_calendar_sync_window_summary">Look for 5 minutes after and before the current time.</string>
    <string name="preference_general_calendar_sync_window_title">Events in 5 minutes window</string>
    <string name="preferences_header_blank_summary_summary">Result\'s table format</string>
    <string name="preferences_header_blank_summary_title">Result\'s Table</string>
    <string name="preference_edit_class_on_click_title">Edit Class by short click</string>
    <string name="preference_edit_class_on_click_summary">If set allow editing on Click, else - on Long Click</string>
</resources>