<?xml version="1.0" encoding="utf-8"?>

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.drprog.sjournal.PrefsActivity$PrefsFragmentGeneral"
        android:icon="@android:drawable/ic_menu_preferences"
        android:summary="@string/preferences_header_general_summary"
        android:title="@string/preferences_header_general_title"/>
    <header
        android:fragment="com.drprog.sjournal.PrefsActivity$PrefsFragmentBlank"
        android:icon="@android:drawable/ic_menu_view"
        android:summary="@string/preferences_header_blank_summary"
        android:title="@string/preferences_header_blank_title"/>
    <header
        android:fragment="com.drprog.sjournal.PrefsActivity$PrefsFragmentBlankSummary"
        android:icon="@android:drawable/ic_menu_view"
        android:summary="@string/preferences_header_blank_summary_summary"
        android:title="@string/preferences_header_blank_summary_title"/>
</preference-headers>