<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.drprog.sjournal.MainActivity">


    <item
        android:id="@+id/menu_database"
        android:title="@string/menu_database"
        android:orderInCategory="97"
        android:showAsAction="never">
        <menu>
            <item android:id="@+id/menu_database_export"
                  android:title="@string/menu_database_export"
                  android:icon="@android:drawable/ic_menu_save"
                  android:orderInCategory="1"/>
            <item android:id="@+id/menu_database_restore"
                  android:title="@string/menu_database_restore"
                  android:icon="@android:drawable/ic_menu_preferences"
                  android:orderInCategory="2"/>
        </menu>
     </item>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="98"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="99"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"/>
</menu>
